--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ title: Snapshots of Internal Monologues
 subtitle: My personal tech blog
 author: Nishanth Vasudevan
 simple_search: https://www.google.com/search
-description: A tech blog
+description: A tech blog snapshots of internal monologues
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
@@ -74,13 +74,13 @@ twitter_user: nishanthvn86
 twitter_tweet_button: true
 
 # Google +1
-google_plus_one: false
+google_plus_one: true
 google_plus_one_size: medium
 
 # Google Plus Profile
 # Hidden: No visible button, just add author information to search results
-googleplus_user:
-googleplus_hidden: false
+googleplus_user: nishanthvn86
+googleplus_hidden: true
 
 # Pinboard
 pinboard_user:
